# kyobo_capture

./: CLAUDE.md  README.md  main.py  pyproject.toml
.omc/: CLAUDE.md  ultrawork-state.json
.omc/plans/: CLAUDE.md  capture-pdf.md
capture_pdf/: CLAUDE.md  __init__.py  capturer.py  cli.py  navigator.py  pdf_compiler.py  permissions.py
capture_pdf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: CLAUDE.md  conftest.py  test_capturer.py  test_cli.py  test_integration.py  test_navigator.py  test_pdf_compiler.py  test_permissions.py
